<resources>
    <string name="app_name">AviFeeder</string>
    <string name="app_logo_description">App logo of AviFeeder</string>
    <string name="app_comida_description">Image food</string>
    <string name="app_agua_description">Image water</string>

    <string name="nivel_label">Nivel:</string>
    <string name="valor_nivel_label">SUFICIENTE / BAJO</string>
    <string name="ultima_actu_label">Última actualización:</string>
    <string name="ultima_actu_valor_label">HH:MM:SS hs</string>

    <color name="fondo_personalizado">#f4f7e4</color>
    <string name="mqtt_message_broadcast">com.example.avifeeder.MQTT_MESSAGE</string>

    <string name="dispensador_label">Dispensador de Semillas</string>
    <string name="ledComida_label">Led - Nivel de comida Bajo</string>
    <string name="ledAgua_label">Led - Nivel de agua Bajo</string>
    <string name="activar_label">Activar</string>
    <string name="desactivar_label">Desactivar</string>

    <string name="footer_label">SOA- Grupo M4</string>
    <string name="volver_label">Volver</string>
    <string name="mas_label">Ver mas</string>
</resources>