<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fondo_personalizado">

    <ImageButton
        android:id="@+id/btnMas"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/mas_label"
        android:src="@mipmap/ic_launcher_mas_png_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="414dp"
        android:layout_height="287dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_logo_foreground" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="371dp"
        android:layout_height="101dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:padding="16dp">

            <!-- Imagen agua -->
            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="67dp"
                android:layout_height="68dp"
                android:contentDescription="@string/app_agua_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_logoagua_foreground" />

            <!-- Texto Nivel Agua -->
            <TextView
                android:id="@+id/textViewDispensador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/nivel_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imageView12"
                app:layout_constraintTop_toTopOf="@id/imageView12" />

            <!-- Valor de Nivel Agua -->
            <TextView
                android:id="@+id/textViewNivelAguaValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/valor_nivel_label"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/textViewDispensador"
                app:layout_constraintTop_toTopOf="@id/textViewDispensador" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="371dp"
        android:layout_height="101dp"
        android:layout_marginTop="36dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Imagen de comida -->
            <ImageView
                android:id="@+id/imageComida"
                android:layout_width="68dp"
                android:layout_height="67dp"
                android:contentDescription="@string/app_comida_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_logo_comida" />

            <!-- Texto Nivel de Comida -->
            <TextView
                android:id="@+id/textViewNivelComida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/nivel_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imageComida"
                app:layout_constraintTop_toTopOf="@id/imageComida" />

            <!-- Valor del Nivel -->
            <TextView
                android:id="@+id/textViewNivelComidaValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/valor_nivel_label"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/textViewNivelComida"
                app:layout_constraintTop_toTopOf="@id/textViewNivelComida" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="371dp"
        android:layout_height="58dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.347">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Texto de Última Actualización -->
            <TextView
                android:id="@+id/textViewActualizacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ultima_actu_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Valor de Última Actualización -->
            <TextView
                android:id="@+id/textViewActualizacionValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ultima_actu_valor_label"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewActualizacion"
                app:layout_constraintTop_toTopOf="@id/textViewActualizacion" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />


</androidx.constraintlayout.widget.ConstraintLayout>