<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:background="@color/fondo_personalizado">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="414dp"
        android:layout_height="287dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_logo_foreground"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/btnVolver"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/volver_label"
        android:src="@mipmap/ic_launcher_flecha_png_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="371dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Texto Led Comida -->
            <TextView
                android:id="@+id/textViewLedComida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ledComida_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Botton Activar Led Comida -->
            <Button
                android:id="@+id/btnActivarLedComida"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#2227E9"
                android:text="@string/activar_label"
                app:iconTint="#FDF9FC"
                app:layout_constraintEnd_toStartOf="@+id/btnDesactivarLedComida"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLedComida" />

            <!-- Botton Desactivar Led Comida -->
            <Button
                android:id="@+id/btnDesactivarLedComida"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#2227E9"
                android:text="@string/desactivar_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLedComida" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="371dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.365">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Texto Led Agua -->
            <TextView
                android:id="@+id/textViewLedAgua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ledAgua_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Botton Activar Led Agua -->
            <Button
                android:id="@+id/btnActivarLedAgua"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#2227E9"
                android:text="@string/activar_label"
                app:iconTint="#FDF9FC"
                app:layout_constraintEnd_toStartOf="@+id/btnDesactivarLedAgua"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLedAgua" />

            <!-- Botton Desactivar Led Agua -->
            <Button
                android:id="@+id/btnDesactivarLedAgua"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#2227E9"
                android:text="@string/desactivar_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLedAgua" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
    android:id="@+id/textFooter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/footer_label"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardView3" />


</androidx.constraintlayout.widget.ConstraintLayout>